Personalized project forked from John Papa

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2.1'
 
 services:
   docker-angular-cli:
-    image: johnpapa/angular-cli
+    image: tumbone/angular-cli
     build: .
     environment:
       NODE_ENV: production
